--- a/src/template.html
+++ b/src/template.html
@@ -5,19 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
-            <button id="hamburger"></button>
+            <button id="hamburger" class="material-symbols-outlined">menu</button>
             <h1>Things ToDo</h1>
         </nav>
-        <div id="sidebar">
-
-        </div>
-        <div id="content">
-
-        </div>
     </header>
+    <div class="content">
+        <div class="left-panel">
+            <h1>Projects</h1>
+            <ul class="project-list"></ul>
+            <button id="add-proj-btn"  class="material-symbols-outlined">
+                add
+                <span>Add Project</span>
+            </button>
+        </div>
+        <div class="right-panel">
+            <div class="project-header">ALL TASKS</div>
+        </div>
+    </div>
 </body>
 </html>
